tests/expected/task-2/missing-field-2.uc.out
---
test: type suites/task-2/missing-field-2.uc
---
suites/task-2/missing-field-2.uc:6:15: type error: Cannot unify '◇' and '⟦(*(*n).a).b[6:21]⟧' (with canonicals '◇' and 'int')
      output (*(*n).a).b; // error: missing field
                ^


exit: 1
